# AdventOfCode2023

./: README.md  pyproject.toml
AdventOfCode2023/: main.py
AdventOfCode2023/day1/: solution.py
AdventOfCode2023/day2/: solution.py
AdventOfCode2023/day3/: solution.py
AdventOfCode2023/day4/: solution.py
AdventOfCode2023/day5/: solution.py  task.txt
AdventOfCode2023/day6/: solution.py  task.txt
AdventOfCode2023/day7/: solution.py
day5/: solution.py
