[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Sean Brackenborough <sean.brackenborough.dev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "AdventOfCode2023" }
]

[tool.poetry.dependencies]
python = "^3.12"
natsort = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
AdventOfCode2023 ="AdventOfCode2023.main:main"

[tool.poetry.plugins."AdventOfCode2023.days"]
day1 = "AdventOfCode2023.day1.solution:parts"
day2 = "AdventOfCode2023.day2.solution:parts"
day3 = "AdventOfCode2023.day3.solution:parts"
day4 = "AdventOfCode2023.day4.solution:parts"
day5 = "AdventOfCode2023.day5.solution:parts"
day6 = "AdventOfCode2023.day6.solution:parts"
day7 = "AdventOfCode2023.day7.solution:parts"
day8 = "AdventOfCode2023.day8.solution:parts"
day9 = "AdventOfCode2023.day9.solution:parts"
day10 = "AdventOfCode2023.day10.solution:parts"
day11 = "AdventOfCode2023.day11.solution:parts"
day12 = "AdventOfCode2023.day12.solution:parts"
day13 = "AdventOfCode2023.day13.solution:parts"
day14 = "AdventOfCode2023.day14.solution:parts"
day15 = "AdventOfCode2023.day15.solution:parts"
day16 = "AdventOfCode2023.day16.solution:parts"
day17 = "AdventOfCode2023.day17.solution:parts"
day18 = "AdventOfCode2023.day18.solution:parts"
day19 = "AdventOfCode2023.day19.solution:parts"
day20 = "AdventOfCode2023.day20.solution:parts"
day21 = "AdventOfCode2023.day21.solution:parts"
day22 = "AdventOfCode2023.day22.solution:parts"
day23 = "AdventOfCode2023.day23.solution:parts"
day24 = "AdventOfCode2023.day24.solution:parts"
day25 = "AdventOfCode2023.day25.solution:parts"

